--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /.venv
+control/python_pc/backends/__pycache__/*
+control/python_pc/controllers/__pycache__/*
+control/python_pc/gui/__pycache__/*
+control/python_pc/utils/__pycache__/*
