implemented hardware control on COM5

--- a/control/teensy_pendulum_controller/platformio.ini
+++ b/control/teensy_pendulum_controller/platformio.ini
@@ -13,4 +13,6 @@ platform = teensy
 board = teensy40
 framework = arduino
 monitor_speed = 115200
-lib_deps = mathertel/RotaryEncoder@^1.5.3
+lib_deps = 
+	mathertel/RotaryEncoder@^1.5.3
+	cytrontechnologies/Cytron Motor Drivers Library@^1.0.1
